--- a/howitworks/howitworks.css
+++ b/howitworks/howitworks.css
@@ -14,7 +14,11 @@
 }
 
 .flexbox {
-    margin: 100px;
+    margin: 100px 0px 100px 180px;
+}
+
+.leftbox {
+    width: 500px;
 }
 
 .doubletap {
@@ -30,6 +34,8 @@
     
 }
 
+
+
 /* .nav {
     margin-left: 50px;
 } */
@@ -42,29 +48,28 @@ a {
 
 .signinbtn {
     background-color: white;
-    color: blue;
+    color: rgb(45, 45, 248);
     padding: 5px;
     width: 80px;
-    border: 2px solid blue;
+    border: 1px solid rgb(45, 45, 248);
     border-radius: 8px;
+    margin-right: 20px;
     
 
 }
 
 .tryitbtn {
-    background-color: blue;
+    background-color: rgb(45, 45, 248);
     color: white;
     padding: 5px;
     width: 80px;
-    border: 2px solid blue;
+    border: 2px solid rgb(45, 45, 248);
     border-radius: 8px;
     margin-right: 80px;
 }
 
 h1 {
     font-weight: 500;
-    
-    
 }
 
 h3 {
@@ -78,12 +83,12 @@ h3 {
 }
 
 .signupbtn {
-    background-color: blue;
+    background-color: rgb(45, 45, 248);
     color: white;
     padding: 5px;
     width: 120px;
     height: 40px;
-    border: 2px solid blue;
+    border: 2px solid rgb(45, 45, 248);
     border-radius: 8px;
     margin-right: 10px;
     
@@ -91,11 +96,11 @@ h3 {
 
 .chatbtn {
     background-color: white;
-    color: blue;
+    color: rgb(45, 45, 248);
     padding: 5px;
     width: 120px;
     height: 40px;
-    border: 2px solid blue;
+    border: 2px solid rgb(45, 45, 248);
     border-radius: 8px;
     
 }
@@ -108,11 +113,71 @@ h3 {
 h6 {
     padding-right: 10px;
     font-weight: 400;
-    font-size: x-small
+    font-size: x-small;
 
 }
 
 
 
+.icons {
+    /* margin-left: 200px; */
+    /* margin-top: 60px; 
+    width: 70%; */
+
+    height: 550px;
+    margin-top: 50px;
+}
+
+
+
+.twoboxes {
+    display: flex;
+    justify-content: center;
+}
+
+/* .container {  
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "a b c"
+      "d e f"
+      "g h i";
+  } */
   
+  /* .a { 
+    grid-area: a; 
+    background-color: rgb(45, 45, 248);
+    color: white;
+    margin: 20px;
+    width: 100px;
+    height: 80px;
+    border-radius: 50px 0;
+    font-size: xx-small;
+    
+
+}
+  
+  .b { grid-area: b; }
+  
+  .c { grid-area: c; }
+  
+  .d { grid-area: d; }
+  
+  .e { grid-area: e; }
+  
+  .f { grid-area: f; }
+  
+  .g { grid-area: g; }
+  
+  .h { grid-area: h; }
+  
+  .i { grid-area: i; } */
+  
+
+
+
+
 /* Buhay */
