everyones work + landing

--- a/landing/landing.css
+++ b/landing/landing.css
@@ -1,8 +1,9 @@
-.card {
-    border: 15px solid purple;
+.card1 {
+    background-color: blue;
+    color: white;
     width: .5vh;
-    margin: auto;
-    padding: 2.5vh 5% 2.5vh 5%;
+    margin: 50%;
+    padding: 7vh 7% 7vh 7%;
     text-align: left;
 }
 
@@ -16,26 +17,40 @@
 
 .footer {
     background-color: blue;
-    height: 75vh;
+    height: 5vh;
     width: 100%;
-    border: 5vh solid rgb(41, 78, 243);
-    padding: 2.5vh 5% 25vh 5%;
-    margin: 5%;
     text-align: center;
 }
 
-.flex {
-    border: 5px solid brown;
-    width: auto;
-    height: auto;
-    padding: 1%;
-    margin: 1%;
+.body p {
+    text-align: start;
+    text-overflow: initial;
+    border: 10px solid brown;
+    width: 150%;
+    height: 150%;
+    padding: 5%;
+    margin-inline-start: 100%;
 }
+
 .mid {
     text-align: center;
     margin: 5%;
 }
 
-.card1 {
+.sign {
+    align-content: left;
     border: solid pink;
+    text-align: center;
+    padding: 150%;
+    height: 100%;
+    margin-inline-start: 100%;
+}
+
+.start {
+    border: 1px solid black;
+    height: 40%;
+    width: 100%;
+    text-align: center;
+    padding: 15%;
+    margin-inline-start: 100%;
 }
