--- a/landing/landing.css
+++ b/landing/landing.css
@@ -1,1 +1,57 @@
 /* Robin */
+.card1 {
+    background-color: blue;
+    color: white;
+    width: .5vh;
+    margin: 50%;
+    padding: 7vh 7% 7vh 7%;
+    text-align: left;
+}
+
+.box {
+    border: 1px solid rgb(0, 0, 0);
+    width: 50vh;
+    margin: auto;
+    padding: auto;
+    text-align: left;
+}
+
+.footer {
+    background-color: blue;
+    height: 5vh;
+    width: 100%;
+    text-align: center;
+}
+
+.body p {
+    text-align: start;
+    text-overflow: initial;
+    border: 10px solid brown;
+    width: 150%;
+    height: 150%;
+    padding: 5%;
+    margin-inline-start: 100%;
+}
+
+.mid {
+    text-align: center;
+    margin: 5%;
+}
+
+.sign {
+    align-content: left;
+    border: solid pink;
+    text-align: center;
+    padding: 150%;
+    height: 100%;
+    margin-inline-start: 100%;
+}
+
+.start {
+    border: 1px solid black;
+    height: 40%;
+    width: 100%;
+    text-align: center;
+    padding: 15%;
+    margin-inline-start: 100%;
+}
