Added skeleton for signin

--- a/howitworks/howitworks.css
+++ b/howitworks/howitworks.css
@@ -50,6 +50,7 @@
     margin: 30px 0px 100px 80px;
 }
 
+
 a {
     text-decoration: none;
     color: black;
@@ -115,6 +116,15 @@ h6 {
 
 }
 
+/* @media and (max-width: 320px) {
+    body header head footer {
+    flex-direction: column;
+    flex-wrap: wrap;
+        flex-grow: 0;
+flex-shrink: 0;}
+} */
+
+
 /* footer {
     background-color: rgb(45, 45, 248);
     color: white;
@@ -157,6 +167,10 @@ h6 {
     justify-content: center;
     padding-bottom: 60px;
 } */
+
+
+/* -------------------------------------------------------------------------------- */
+
 
 /* Carlos */
 
