--- a/signin/signin.css
+++ b/signin/signin.css
@@ -1,1 +1,73 @@
-/* Juan */
+* {
+    box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
+    font-family: Roboto;
+}
+
+body {
+    display:flex;
+   justify-content: space-between;
+}
+
+.box1 {
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    background-image: url("Group15.png");
+    background-repeat: no-repeat;
+    background-color: blue;
+    border-radius: 0% 0% 800px 0px;
+    color: white;
+    text-align: center;
+    padding: 350px 150px;
+    
+    
+}
+
+.box2 {
+    display: flex;
+    flex-direction: column;
+    padding-right: 300px;
+    
+h2 {
+    padding: 50px;
+}
+}
+
+.inputfields {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    
+}
+
+input {
+    margin: 20px;
+    border-radius: 30px
+
+}
+
+.signupbtn {
+    background-color: rgb(39, 39, 246);
+    border-radius: 20px;
+    
+}
+
+h2 {
+    text-align: center;
+    font-size: 40px;
+    
+}
+
+.iconbuttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+
+button {
+    margin: 50px;
+}
+
